update main screen